# SCHwash

./: CMakeLists.txt  CODE CHEACK.sl  Cex.sl  CodeAn.cdproj  Firmware74HC595.pdsprj  Firmware74HC595.pdsprj.HOANGANH.pcx.workspace  GIPO_Description.xlsx  LEDSEG.c  LEDSEG.c.ini  LEDSEG_new.brk  LEDSEG_new.cfg  LEDSEG_new.dbg  LEDSEG_new.dct  LEDSEG_new.dlt  LEDSEG_new.hex  LEDSEG_new.lst  LEDSEG_new.mcppi  LEDSEG_new.mcppi_callertable.txt  LEDSEG_new_callertable.txt  NewUnit_0.cp  NewUnit_0.mcl  New_Project.cdproj  Project.proj  README.md  SCHwash.sl  SHC_WASH.proj  UAPI_button.asm  UAPI_button.c  UAPI_button.c.ini  UAPI_button.cp  UAPI_button.h  UAPI_button.mcl  UAPI_motor.asm  UAPI_motor.c  UAPI_motor.c.ini  UAPI_motor.cp  UAPI_motor.h  UAPI_motor.mcl  UHAL_74HC595.asm  UHAL_74HC595.c  (+46 more)
CppDependOut/: CppDependReport.html
CppDependOut/2022_03/22_10_56/: CppDependAnalysisResult_CodeAn_2022Mar22_10h56.cdar  InfoWarnings.xml
CppDependOut/2022_03/22_10_58/: CppDependAnalysisResult_CodeAn_2022Mar22_10h57.cdar  CppDependReport.html  InfoWarnings.xml
CppDependOut/TrendMetrics/: CppDependTrendData2022.xml
Doc/: Embedded coding solution.vsdx  GIPO_Description.xlsx  SCH wash project Embedded architecture layer.vsdx  State descrption.xlsx  workspace.code-workspace
Project Backups/: Firmware74HC595 [20220313, 10-56-06].pdsprj  Firmware74HC595 [20220313, 14-41-41].pdsprj  Firmware74HC595 [Autosaved].pdsprj
SCHwash.und/: id.txt  settings.xml
SCHwash.und/codecheck/: ignores.json
SCHwash1.und/: arch.json  id.txt  settings.xml
SCHwash1.und/codecheck/: ignores.json
(+31 files in other folders)
